@@ -42,8 +42,11 @@ import org.thymeleaf.util.Validate;
  * @author Daniel Fern&aacute;ndez
  * 
  * @since 1.1
+ * @deprecated replaced by {@link AbstractFragmentHandlingAttrProcessor}. Will be
+ *             removed in 2.1.x.
  *
  */
+@Deprecated
 public abstract class AbstractFragmentAttrProcessor 
         extends AbstractAttrProcessor {
 
